V100_results/results/heat2d/sycl.log
~/repos/llvm/build/bin/clang++ -std=c++17 -Wall -fsycl --gcc-toolchain=/home/ga27mex2/spack_thx2/spack/opt/spack/linux-centos8-thunderx2/gcc-14.1.0/gcc-14.1.0-kl6fnbyj4mhv4v5emwvqi6nmxb4kvjae -fsycl-targets=nvptx64-nvidia-cuda -Xsycl-target-backend --cuda-gpu-arch=sm_70 -DUSE_GPU -DUSE_GPU -O3 -O3 -c main.cpp -o main.o
In file included from main.cpp:12:
In file included from ./lapl_ss.c:1:
/home/ga27mex2/repos/llvm/build/lib/clang/20/include/xmmintrin.h:14:2: error: "This header is only meant to be used on x86 and x64 architecture"
   14 | #error "This header is only meant to be used on x86 and x64 architecture"
      |  ^
In file included from main.cpp:12:
In file included from ./lapl_ss.c:1:
In file included from /home/ga27mex2/repos/llvm/build/lib/clang/20/include/xmmintrin.h:17:
/home/ga27mex2/repos/llvm/build/lib/clang/20/include/mmintrin.h:14:2: error: "This header is only meant to be used on x86 and x64 architecture"
   14 | #error "This header is only meant to be used on x86 and x64 architecture"
      |  ^
/home/ga27mex2/repos/llvm/build/lib/clang/20/include/mmintrin.h:68:3: error: use of undeclared identifier '__builtin_ia32_emms'; did you mean '__builtin_isless'?
   68 |   __builtin_ia32_emms();
      |   ^
/home/ga27mex2/spack_thx2/spack/opt/spack/linux-centos8-thunderx2/gcc-14.1.0/gcc-14.1.0-kl6fnbyj4mhv4v5emwvqi6nmxb4kvjae/lib/gcc/aarch64-unknown-linux-gnu/14.1.0/../../../../include/c++/14.1.0/cmath:1300:12: note: '__builtin_isless' declared here
 1300 |   { return __builtin_isless(__x, __y); }
      |            ^
In file included from main.cpp:12:
In file included from ./lapl_ss.c:1:
In file included from /home/ga27mex2/repos/llvm/build/lib/clang/20/include/xmmintrin.h:17:
/home/ga27mex2/repos/llvm/build/lib/clang/20/include/mmintrin.h:68:23: error: too few arguments to function call, expected 2, have 0
   68 |   __builtin_ia32_emms();
      |   ~~~~~~~~~~~~~~~~~~~~^
/home/ga27mex2/repos/llvm/build/lib/clang/20/include/mmintrin.h:159:22: error: use of undeclared identifier '__builtin_ia32_packsswb128'
  159 |     return __trunc64(__builtin_ia32_packsswb128(
      |                      ^
/home/ga27mex2/repos/llvm/build/lib/clang/20/include/mmintrin.h:185:22: error: use of undeclared identifier '__builtin_ia32_packssdw128'
  185 |     return __trunc64(__builtin_ia32_packssdw128(
      |                      ^
/home/ga27mex2/repos/llvm/build/lib/clang/20/include/mmintrin.h:211:22: error: use of undeclared identifier '__builtin_ia32_packuswb128'
  211 |     return __trunc64(__builtin_ia32_packuswb128(
      |                      ^
/home/ga27mex2/repos/llvm/build/lib/clang/20/include/mmintrin.h:701:22: error: use of undeclared identifier '__builtin_ia32_pmaddwd128'
  701 |     return __trunc64(__builtin_ia32_pmaddwd128((__v8hi)__anyext128(__m1),
      |                      ^
/home/ga27mex2/repos/llvm/build/lib/clang/20/include/mmintrin.h:723:22: error: use of undeclared identifier '__builtin_ia32_pmulhw128'
  723 |     return __trunc64(__builtin_ia32_pmulhw128((__v8hi)__anyext128(__m1),
      |                      ^
/home/ga27mex2/repos/llvm/build/lib/clang/20/include/mmintrin.h:768:22: error: use of undeclared identifier '__builtin_ia32_psllw128'; did you mean '__builtin_arm_wsr128'?
  768 |     return __trunc64(__builtin_ia32_psllw128((__v8hi)__anyext128(__m),
      |                      ^
/home/ga27mex2/repos/llvm/build/lib/clang/20/include/mmintrin.h:768:46: error: cannot initialize a parameter of type 'const char *' with an rvalue of type '__v8hi' (vector of 8 'short' values)
  768 |     return __trunc64(__builtin_ia32_psllw128((__v8hi)__anyext128(__m),
      |            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~
  769 |                                              (__v8hi)__anyext128(__count)));
      |                                              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/ga27mex2/repos/llvm/build/lib/clang/20/include/mmintrin.h:53:44: note: expanded from macro '__trunc64'
   53 |   (__m64) __builtin_shufflevector((__v2di)(x), __extension__(__v2di){}, 0)
      |                                            ^
/home/ga27mex2/repos/llvm/build/lib/clang/20/include/mmintrin.h:791:22: error: use of undeclared identifier '__builtin_ia32_psllwi128'
  791 |     return __trunc64(__builtin_ia32_psllwi128((__v8hi)__anyext128(__m),
      |                      ^
/home/ga27mex2/repos/llvm/build/lib/clang/20/include/mmintrin.h:815:22: error: use of undeclared identifier '__builtin_ia32_pslld128'
  815 |     return __trunc64(__builtin_ia32_pslld128((__v4si)__anyext128(__m),
      |                      ^
/home/ga27mex2/repos/llvm/build/lib/clang/20/include/mmintrin.h:838:22: error: use of undeclared identifier '__builtin_ia32_pslldi128'
  838 |     return __trunc64(__builtin_ia32_pslldi128((__v4si)__anyext128(__m),
      |                      ^
/home/ga27mex2/repos/llvm/build/lib/clang/20/include/mmintrin.h:859:22: error: use of undeclared identifier '__builtin_ia32_psllq128'
  859 |     return __trunc64(__builtin_ia32_psllq128((__v2di)__anyext128(__m),
      |                      ^
/home/ga27mex2/repos/llvm/build/lib/clang/20/include/mmintrin.h:880:22: error: use of undeclared identifier '__builtin_ia32_psllqi128'
  880 |     return __trunc64(__builtin_ia32_psllqi128((__v2di)__anyext128(__m),
      |                      ^
/home/ga27mex2/repos/llvm/build/lib/clang/20/include/mmintrin.h:905:22: error: use of undeclared identifier '__builtin_ia32_psraw128'
  905 |     return __trunc64(__builtin_ia32_psraw128((__v8hi)__anyext128(__m),
      |                      ^
/home/ga27mex2/repos/llvm/build/lib/clang/20/include/mmintrin.h:929:22: error: use of undeclared identifier '__builtin_ia32_psrawi128'
  929 |     return __trunc64(__builtin_ia32_psrawi128((__v8hi)__anyext128(__m),
      |                      ^
/home/ga27mex2/repos/llvm/build/lib/clang/20/include/mmintrin.h:954:22: error: use of undeclared identifier '__builtin_ia32_psrad128'
  954 |     return __trunc64(__builtin_ia32_psrad128((__v4si)__anyext128(__m),
      |                      ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [Makefile:71: main.o] Error 1
